Regression: Snapping no longer works with scaling in graph editor #116367

Closed
opened 2023-12-20 03:53:43 +01:00 by justausername · 3 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.92

Blender Version
Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: 9be62e85b727
Worked: version: 3.6.4, branch: blender-v3.6-release, commit date: 2023-09-25 13:24, hash: 21bfc5e7fe3f

Caused by b670e7a82c

Short description of error
In pre-4.0 versions of Blender, snapping worked when scaling keyframes horizontally in the graph editor. In 4.0+ it does not work with scaling, however it still works when moving the keyframes horizontally. It also still functions as expected in the dope sheet - but not the graph editor.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 545.92 **Blender Version** Broken: version: 4.0.2, branch: blender-v4.0-release, commit date: 2023-12-05 07:41, hash: `9be62e85b727` Worked: version: 3.6.4, branch: blender-v3.6-release, commit date: 2023-09-25 13:24, hash: `21bfc5e7fe3f` Caused by b670e7a82c **Short description of error** In pre-4.0 versions of Blender, snapping worked when scaling keyframes horizontally in the graph editor. In 4.0+ it does not work with scaling, however it still works when _moving_ the keyframes horizontally. It also still functions as expected in the dope sheet - but not the graph editor.
justausername added the
Status
Needs Triage
Priority
Normal
Type
Report
labels 2023-12-20 03:53:44 +01:00
Member

Thanks for the report. I can confirm

Thanks for the report. I can confirm
Member

Caused by b670e7a82c
@ChrisLend ^

Caused by b670e7a82c9b26e93cc005e7e0a553f2a768e176 @ChrisLend ^

this is a bit confusing, but because the snapping has moved to the global system, some settings from the 3D viewport now apply here.
In this case, the "Affect" options at the very bottom define if snapping is enabled for each transform mode.
image

I will talk to the module on how to best approach this.

this is a bit confusing, but because the snapping has moved to the global system, some settings from the 3D viewport now apply here. In this case, the "Affect" options at the very bottom define if snapping is enabled for each transform mode. ![image](/attachments/848ba981-facb-4ce5-85cc-2358bab5774d) I will talk to the module on how to best approach this.
Christoph Lendenfeld self-assigned this 2023-12-21 10:52:36 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-04 14:04:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#116367
No description provided.